# QtPluginManager-1

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/: CMakeLists.txt
plugins/core/: CMakeLists.txt  iplugin.h
plugins/first/: CMakeLists.txt  firstplugin.cpp  firstplugin.h  iplugin.h
plugins/second/: CMakeLists.txt  secondplugin.cpp  secondplugin.h
plugins/third/: CMakeLists.txt
